Finished first part.

--- a/src/template.html
+++ b/src/template.html
@@ -11,11 +11,11 @@
     <header>
         <nav>
             <div class="nav-container">
-                <a href="#" onclick="showTab('home')">Home</a>
-                <a href="#" onclick="showTab('resume')">Resume</a>
-                <a href="#" onclick="showTab('certifications')">Certifications</a>
-                <a href="#" onclick="showTab('coursework')">Coursework & Projects</a>
-                <a href="#" onclick="showTab('roadmap')">Roadmap</a>
+                <a href="#" onclick="showTab('home', event)">Home</a>
+                <a href="#" onclick="showTab('resume', event)">Resume</a>
+                <a href="#" onclick="showTab('certifications', event)">Certifications</a>
+                <a href="#" onclick="showTab('coursework', event)">Coursework & Projects</a>
+                <a href="#" onclick="showTab('roadmap', event)">Roadmap</a>
             </div>
         </nav>
     </header>
@@ -24,8 +24,8 @@
             <div class="hero">
                 <div class="hero-content">
                     <img src="/images/myFace.png" alt="Your Headshot" class="avatar">
-                    <h1>Your Name</h1>
-                    <p class="tagline">Aspiring [Your Profession] with a passion for [Interest]</p>
+                    <h1>Nithin Rajesh</h1>
+                    <p class="tagline">Aspiring Software Engineer with a passion for Game Development</p>
                     <button onclick="location.href='#about'" class="cta-button">Learn More About Me</button>
                 </div>
             </div>
