Finished skills. I think it looks good for now.

--- a/src/template.html
+++ b/src/template.html
@@ -17,6 +17,7 @@
                 <a href="#" onclick="showTab('home', event)">HOME</a>
                 <a href="#" onclick="showTab('resume', event)">RESUME</a>
                 <a href="#" onclick="showTab('certifications', event)">CERTIFICATIONS</a>
+                <a href="#" onclick="showTab('skills', event)">SKILLS</a>
                 <a href="#" onclick="showTab('coursework', event)">COURSEWORK & PROJECTS</a>
                 <a href="#" onclick="showTab('stats', event)">LEETCODE STATS</a>
                 <a href="#" onclick="showTab('roadmap', event)">ROADMAP</a>
@@ -58,6 +59,22 @@
                     <li>Certification 2</li>
                     <li>Certification 3</li>
                 </ul>
+            </div>
+        </section>
+
+        <section id="skills" class="tab-content">
+            <div class="content-section">
+                <h2>Technical Skills</h2>
+                    <img src="/svgs/html-5-svgrepo-com.svg">
+                    <img src="/svgs/css-svgrepo-com.svg">
+                    <img src="/svgs/icons8-javascript.svg">
+                    <img src="/svgs/icons8-webpack.svg">
+                    <img src="/svgs/python.svg">
+                    <img src="/svgs/c.svg">
+                    <img src="/svgs/java-svgrepo-com.svg">
+                    <img src="/svgs/linux.svg">
+                    <img src="/svgs/file-type-godot.svg">
+                    <img src="/svgs/Unity.svg">
             </div>
         </section>
 
