Changed file name of html file.

--- a/src/index.html
+++ b/src/index.html
@@ -83,7 +83,7 @@
                 <h2>Coursework & Projects</h2>
                 <p>Here are some of my relevant coursework and projects:</p>
                 <ul>
-                    <li>Project 1 - Brief description</li>
+                    <li>Road Runner - A Godot Video Game I created in my CPSC 386 - Intro to Game Design Class.</li>
                     <li>Project 2 - Brief description</li>
                     <li>Coursework 1 - Brief description</li>
                 </ul>
