Changed position of index.html for github pages to work.

--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100..900;1,100..900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&family=Space+Grotesk:wght@300..700&display=swap" rel="stylesheet">
-    <script src="index.js" defer></script>
+    <script src="src/index.js" defer></script>
+    <link rel="stylesheet" href="src/style.css">
 </head>
 <body>
     <header>
@@ -43,9 +44,9 @@
         <section id="resume" class="tab-content">
             <div class="content-section">
                 <h2>Resume</h2>
-                <p>Download a PDF of my resume <a href="Nithin - Resume 9-24-2024.pdf" download>here</a>.</p>
+                <p>Download a PDF of my resume <a href="src\Nithin - Resume 9-24-2024.pdf" download>here</a>.</p>
                 <div class="pdf-container">
-                    <iframe id="pdf-frame" src="Nithin - Resume 9-24-2024.pdf" frameborder="0"></iframe>
+                    <iframe id="pdf-frame" src="src/Nithin - Resume 9-24-2024.pdf" frameborder="0"></iframe>
                 </div>
             </div>
         </section>
