--- a/index.html
+++ b/index.html
@@ -84,9 +84,17 @@
                 <h2>Coursework & Projects</h2>
                 <p>Here are some of my relevant coursework and projects:</p>
                 <ul>
-                    <li>Road Runner - A Godot Video Game I created in my CPSC 386 - Intro to Game Design Class.</li>
-                    <li>Project 2 - Brief description</li>
-                    <li>Coursework 1 - Brief description</li>
+                    <li>Road Runner - A Godot Video Game I created in my CPSC 386 - Intro to Game Design Class.
+                        <a href="https://github.com/nrajesh2305/road_runner">Visit my Repository for the Game, and run it using Godot!</a>
+                        <img src="roadRunnerProject.png" width="768px" height="512px">
+                    </li>
+                    <li>Sign Up Form - A Template Website for a Sign Up Form, can be used by anyone for anything!
+                        <a href="https://github.com/nrajesh2305/sign-up-form">Open Github Pages for the project to view it for yourself!</a>
+                        <img src="signUpForm.png" width="768px" height="512px">
+                    </li>
+                    <li>CPSC 386 - Intro to Game Design - Teaches Fundamental Game Design, including theory and information regarding
+                        What makes a good game, and what are the aspects that allow users to have fun with a product.
+                    </li>
                 </ul>
             </div>
         </section>
